Added additional files

--- a/Smart Calculator/Very big/task-info.yaml
+++ b/Smart Calculator/Very big/task-info.yaml
@@ -83,6 +83,9 @@ files:
         }
     }
   learner_created: false
+- name: src/calculator/Calculator.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/42/stages/227/implement
 status: Solved
 record: -1
